--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -18,9 +18,10 @@
 
 .site-title {
   font-family: sans-serif;
-  font-size: 36px;
+  font-size: 30px;
   margin: 0;
   color: #777;
+  font-weight: 600;
 }
 
 .header__right-side {
@@ -50,4 +51,13 @@
 
 .header__account-btn  i{
   font-size: 36px;
+}
+
+@media (max-width: 500px) {
+  .site-title {
+    font-size: 24px;
+  }
+  .header-inner {
+    padding: 10px;
+  }
 }
